# RAG_indexing

./: .dockerignore  Dockerfile  RAG.py  README.md  config.env  docker-compose.yml  main.py  pyproject.toml
RAG/: RAG.py
RAG/chroma_db/5909105e-8f16-4a90-bff6-ad73907538e0/: index_metadata.pickle
front_app/: app.py
front_app/static/css/: style.css
front_app/templates/: index.html
